Fix errorprone for the Build stage